--- a/index.html
+++ b/index.html
@@ -247,12 +247,12 @@
 <div class="owners" id="owners-text"></div>
 <div class="final-text" id="final-text"></div>
 
-<footer>Мухаммаджан&Ноилабону</footer>
+<footer>Мухаммаджон&Ноилабону</footer>
 
 <script>
 const translations = {
     uz: {
-        groom: "Мухаммаджан", bride: "Ноилабону", date: "9 октябрь 2025",
+        groom: "Мухаммаджон", bride: "Ноилабону", date: "9 октябрь 2025",
         inviteTitle: "Ассалому алейкум!",
         inviteText: `Азиз меҳмонимиз, сизни фарзандларимиз <span class="highlight-name">Мухаммаджон</span> ва <span class="highlight-name">Ноилабону</span> ларнинг никоҳ тўйи муносабати билан ёзиладиган дастурхонимизга таклиф этамиз.`,
         locationTitle: "Манзилимиз:", locationText: "Хатирчи тумани, «Истиқлол» тўйхонаси",
@@ -263,7 +263,7 @@ const translations = {
         weekdays: ["Д", "С", "Ч", "П", "Ж", "Ш", "Я"], scrollDown: "⬇ Пастга", scrollUp: "⬆ Юқорига"
     },
     kz: {
-        groom: "Мухаммаджон", bride: "Наилабону", date: "9 казан 2025",
+        groom: "Мухаммаджан", bride: "Наилабону", date: "9 қазан 2025",
         inviteTitle: "Біз сіздерді үйлену тойына шақырамыз!",
         inviteText: `Құрметті қонақтар! Сіздерді ұлымыз <span class="highlight-name">Мухаммаджан</span> және келініміз <span class="highlight-name">Наилабану</span>ның некелесу тойына шақырамыз.`,
         locationTitle: "Той өтетін орын:", locationText: "Хатырчи ауданы, «ISTIQLOL» мейрамханасы",
